test/class/initReturn0.lox
class Foo {
  init() {
    return "something else";
  }
}

// error: returing value from init
